# igloo

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
igloo/: CodewarsTestListener.h  igloo_framework.h
igloo/core/: contextprovider.h  contextregistry.h  testresultfactory.h  testrunner.h
igloo/core/outputters/: testresultsoutput.h
igloo/core/testlisteners/: minimalprogresstestlistener.h
tests/: coloredconsoletestresultsoutput_tests.cpp  defaulttestresultsoutput_tests.cpp  igloo_self_test.h  main.cpp  running_subsets_of_tests.cpp  testlistener_tests.cpp  visualstudiotestresultsoutput_tests.cpp  xunittestresultsoutput_tests.cpp
tests/fakes/: fake_test_listener.h
